<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mantoNuevo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textPersonName"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/edtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Clave"
            android:inputType="textPassword"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/edtConfirmarClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmarClave"
            android:inputType="textPassword"
            android:paddingTop="10dp" />

        <RadioGroup
            android:id="@+id/rgTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <RadioButton
                android:id="@+id/rbUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario" />

            <RadioButton
                android:id="@+id/rbAsistente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asistente" />

            <RadioButton
                android:id="@+id/rbAdministrador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/administrador" />

        </RadioGroup>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnCancelar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/cancelar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>